fix: more whitespace

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,5 @@
 header {
-    margin-bottom: 4rem;
+    margin-bottom: 5rem;
 
     img {
         float: right;
